@@ -5,6 +5,4 @@ build/
 *.perspectivev3
 project.xcworkspace/
 xcuserdata/
-Source/TestSupport/environment.sh
-Source/TestSupport/lcov-1.9
-Source/TestSupport/envbuild.sh
+Source/XcodeCoverage/
