@@ -1,5 +1,0 @@
-#!/bin/sh
-source envbuild.sh
-
-LCOV_PATH=${SRCROOT}/TestSupport/lcov-1.9/bin
-OBJ_DIR=${OBJECT_FILE_DIR_normal}/${NATIVE_ARCH}
