@@ -1,1 +1,0 @@
-export | egrep '( BUILT_PRODUCTS_DIR)|(NATIVE_ARCH=)|(OBJECT_FILE_DIR_normal)|(SRCROOT)' > TestSupport/envbuild.sh
