@@ -2,6 +2,7 @@
 
 * Removed CocoaPods spec, since it's maintained at CocoaPods.
 * Fixed unit tests so they remain quiet when handling expected test failures.
+* Replaced older code coverage scripts with XcodeCoverage submodule.
 
 
 == Version 1.9 ==
